fix padding ofor wrapper on tablet/mobile

--- a/static/style/style.styl
+++ b/static/style/style.styl
@@ -25,6 +25,11 @@ body
 .wrapper
   height 100%
 
+  +tablet()
+    padding separator
+  +mobile()
+    padding separator
+
 h1
   padding-top 0
   margin-top 0
